odevzdani/tests/valid_input/ok11.java
class Main {
    static int a = 0xFF-1;
    static void run() {

    }
}
