odevzdani/tests/invalid_sem/com/com08.java
class Main {
    static void run() {
        int a = 5/1.2;
    }
}
